5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4163/executions/1758_1583.log
== TEST (2019-05-28 12:16:06) 
-- CODE:
from numpy import*
a = input("digite: ")
x = len(a)/3
i = 0 
b = ""
while(i<len(a)):
	if(x%0):
		b = b + a + "."
print(b)
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 12:17:18) 
-- CODE:
from numpy import*
a = input("digite: "
i = 0 
b = ""
while(i<len(a)):
	if(len(a)%0):
		b = b + a + "."
print(b)
		
-- ERROR:
File "XXXX", line 3
    i = 0 
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 12:17:41) 
-- CODE:
from numpy import*
a = input("digite: ")
i = 0 
b = ""
while(i<len(a)):
	if(len(a)%0):
		b = b + a + "."
print(b)
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 12:18:04) 
-- CODE:
from numpy import*
a = input("digite: ")
i = 0 
b = ""
while(i<len(a)):
	if(len(a)%3):
		b = b + a + "."
print(b)
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 12:57:28) 
-- CODE:
from numpy import*
a = input("digite: ")
i = 0 
b = len(a)%3
while(i<len(a)):
	if(b==0)
	a[i]+=1
	else:
	i = i +1
print(a)
		
-- ERROR:
File "XXXX", line 6
    if(b==0)
           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 12:57:40) 
-- CODE:
from numpy import*
a = input("digite: ")
i = 0 
b = len(a)%3
while(i<len(a)):
	if(b==0):
	a[i]+=1
	else:
	i = i +1
print(a)
		
-- ERROR:
File "XXXX", line 7
    a[i]+=1
    ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 13:00:11) 
-- CODE:
from numpy import*
a = input("digite: ")
i = 0 
b = len(a)%3
c = ""
while(i<len(a)):
	if(b==0):
	a[i]= c + "."
	else:
	i = i +1
print(a)
		
-- ERROR:
File "XXXX", line 8
    a[i]= c + "."
    ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 13:00:23) 
-- CODE:
from numpy import*
a = input("digite: ")
i = 0 
b = len(a)%3
c = ""
while(i<len(a)):
	if(b==0):
		a[i]= c + "."
	else:
	i = i +1
print(a)
		
-- ERROR:
File "XXXX", line 10
    i = i +1
    ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 13:00:38) 
-- CODE:
from numpy import*
a = input("digite: ")
i = 0 
b = len(a)%3
c = ""
while(i<len(a)):
	if(b==0):
		a[i]= c + "."
	else:
		a
	i = i +1
print(a)
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 13:02:12) 
-- CODE:
from numpy import*
a = input("digite: ")
i = 0 
b = len(a)%3
c = ""
while(i<len(a)):
	if(b==0):
		a[i]+=   "."
	else:
		a
	i = i +1
print(a)
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 13:03:08) 
-- CODE:
from numpy import*
a = input("digite: ")
i = 0 
b = len(a)%3
c = ""
while(i<len(a)):
	if(b==0):
		a[i] = a[i] + "."
	else:
		a
	i = i +1
print(a)
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 13:05:56) 
-- CODE:
from numpy import*
a = input("digite: ")
i = 0 
b = len(a)%3
c = ""
while(i<len(a)):
	if(len(a)>=3):
		a[i] = a[i] + "."
	else:
		print(a)
	i = i +1
print(a)
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 13:07:02) 
-- CODE:
from numpy import*
a = input("digite: ")
i = 0 
b = len(a)%3
c = ""
while(i<len(a)):
	if(len(a)>=3):
		new = a[i] + "."
	else:
		print(a)
	i = i +1
print(new)
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 13:08:39) 
-- CODE:
from numpy import*
a = input("digite: ")
i = 0 
b = len(a)%3
c = ""
while(i<len(a)):
	if(len(a)>=3):
		new = "." + a[i]
	else:
		print(a)
	i = i +1
print(new)
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 13:11:35) 
-- CODE:
from numpy import*
a = input("digite: ")
i = 0 
b = len(a)%3
while(i<len(a)):
	if(len(a)%3):
		new = "." + a[i]
	else:
		print(a)
	i = i +1
print(new)
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 13:12:52) 
-- CODE:
from numpy import*
a = input("digite: ")
i = 0 
b = len(a)%3
new = ""
while(i<len(a)):
	if(len(a)>=3):
		new = "." + a[i]
	else:
		print(a)
	i = i +1
print(new)
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 13:14:16) 
-- CODE:
from numpy import*
a = input("digite: ")
i = 0 
b = len(a)%3
new = ""
while(i<len(a)):
	if(a[i]==3):
		new = "." + a[i]
	else:
		print(a)
	i = i +1
print(new)
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 13:15:24) 
-- CODE:
from numpy import*
a = input("digite: ")
i = 0 
b = len(a)%3
new = ""
while(i<len(a)):
	if(i==3):
		new = "." + a[i]
	else:
		print(a)
	i = i +1
print(new)
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 13:17:32) 
-- CODE:
from numpy import*
a = input("digite: ")
i = 0 
b = len(a)%3
new = ""
while(i<len(a)):
	if(i==3 or i == 6):
		new = "." + a[i]
	else:
		new = new
	i = i +1
print(new)
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 13:19:43) 
-- CODE:
from numpy import*
a = input("digite: ")
i = 0 
b = len(a)%3
new = ""
while(i<len(a)):
	if(b == 0):
		new = "." + a[i]
	else:
		new = new
	i = i +1
print(new)
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 13:24:54) 
-- CODE:
from numpy import*
a = input("digite: ")
i = 0 
b = len(a)%3
new = ""
while(i<len(a)):
	if(i % 3 == 0):
		new = new + "." 
	else:
		new = new
	i = i +1
print(new)
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 13:25:41) 
-- CODE:
from numpy import*
a = input("digite: ")
i = 0 
b = len(a)%3
new = ""
while(i<len(a)):
	if(i % 3 == 0):
		new = new + "." + a
	else:
		new = new
	i = i +1
print(new)
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 13:26:29) 
-- CODE:
from numpy import*
a = input("digite: ")
i = 0 
b = len(a)%3
new = ""
while(i<len(a)):
	if(i % 3 == 0):
		new = new + "." + a[i]
	else:
		new = new
	i = i +1
print(new)
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 13:28:19) 
-- CODE:
from numpy import*
a = input("digite: ")
i = 0 
b = len(a)%3
new = ""
while(i<len(a)):
	if(i % 3 == 0):
		new = "." + a[i]
	else:
		new = new
	i = i +1
print(new)
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 13:31:11) 
-- CODE:
from numpy import*
a = input("digite: ")
i = 0 
b = len(a)%3
new = ""
while(i<len(a)):
	if(i % 3 == 0):
		new = "." + a[i] + a[i+1] + a[a+2]
	else:
		new = new
	i = i +1
print(new)
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 13:31:39) 
-- CODE:
from numpy import*
a = input("digite: ")
i = 0 
b = len(a)%3
new = ""
while(i<len(a)):
	if(i % 3 == 0):
		new = "." + a[i] + a[i+1] + a[i+2]
	else:
		new = new
	i = i +1
print(new)
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 13:32:03) 
-- CODE:
from numpy import*
a = input("digite: ")
i = 0 
b = len(a)%3
new = ""
while(i<len(a)):
	if(i % 3 == 0):
		new = new + "." + a[i] + a[i+1] + a[i+2]
	else:
		new = new
	i = i +1
print(new)
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 13:36:02) 
-- CODE:
from numpy import*
a = input("digite: ")
i = 0 
b = len(a)%3
new = ""
while(i<len(a)):
	if(i % 3 == 0):
		new = new + "." + a[i] + a[i+1] + a[i+2]
	else:
		new = new
	i = i +1
r = new[1:]
print(r)
print(new)
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 13:36:42) 
-- CODE:
from numpy import*
a = input("digite: ")
i = 0 
b = len(a)%3
new = ""
while(i<len(a)):
	if(i % 3 == 0):
		new = new + "." + a[i] + a[i+1] + a[i+2]
	else:
		new = new
	i = i +1
r = new[1:]
print(r)

		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-28 13:36:54) 
-- CODE:
from numpy import*
a = input("digite: ")
i = 0 
b = len(a)%3
new = ""
while(i<len(a)):
	if(i % 3 == 0):
		new = new + "." + a[i] + a[i+1] + a[i+2]
	else:
		new = new
	i = i +1
r = new[1:]
print(r)

		
-- EXECUTION TIME:
0.487106
-- TEST CASE 1:
---- input:
123
---- correct output:
123
---- user output:
123
-- TEST CASE 2:
---- input:
123456789000987654321
---- correct output:
123.456.789.000.987.654.321
---- user output:
123.456.789.000.987.654.321
-- TEST CASE 3:
---- input:
987654321
---- correct output:
987.654.321
---- user output:
987.654.321
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
